# Supply_chain_monitoring

./: .env.example  .gitignore  README.md  docker-compose.yml  example.env  implementation_plan.md  mcp.json  pyproject.toml  requirements-dev.txt  test_ttft.py
agents/commodity/: main.py  requirements.txt
agents/common/: base_agent.py  config.py  postgres_client.py  stream_bus.py
agents/intel/: main.py  requirements.txt
agents/logistics/: main.py  requirements.txt
agents/mapper/: main.py
agents/router/: main.py
agents/spatial/: CMakeLists.txt  Dockerfile
agents/spatial/src/: main.cpp
agents/supervisor/: main.py  requirements.txt
agents/synthesizer/: main.py
agents/vision/: main.py  requirements.txt
backend/: __init__.py  config.py  main.py  requirements.txt  run.py
backend/agents/: __init__.py  finance.py  geopolitical.py  intelligence.py  logistics.py  spatial.py  supervisor.py  synthesis.py  vision.py
backend/app/: main.py
backend/database/: __init__.py  dynamodb.py  neo4j_db.py  postgres.py  shadow_db.py
backend/graph/: __init__.py  builder.py  debate.py  routing.py
backend/ingestion/: __init__.py  commodity_etl.py  rss_processor.py  satellite_feed.py  sqs_consumer.py
backend/models/: schemas.py  state.py
backend/providers/: __init__.py  gemini_provider.py  zai_provider.py
backend/tools/: __init__.py  (+5 more)
config/: settings.yaml
docs/: PRD.md  architecture.md
etl/: beat_schedule.py  celery_app.py  config.py  requirements.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+122 files in other folders)
