[project]
name = "supply-chain-risk-intelligence"
version = "8.0.0"
description = "Multi-Agent Supply Chain Risk Intelligence System — Cognitive Control Tower"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "neo4j>=5.20.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
